--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Oleksandr14.github.io/store-furniture/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
